Finished building int solution